--- a/app/src/main/res/xml/preferences_field_visibility.xml
+++ b/app/src/main/res/xml/preferences_field_visibility.xml
@@ -21,7 +21,7 @@
 
 <!-- NEWTHINGS: new fields visibility.
      Third part of the key name **MUST** be equal to the DOM column name.
-     The list here must be kept in sync with {@link GlobalFieldVisibility#KEYS}
+     The list here must be kept in sync with {@link FieldVisibility#DB_KEYS}
 
      Preferences are shown in LOCALE-alphabetical order.
 
@@ -37,36 +37,7 @@
         android:summary="@string/ps_manage_fields"
         android:title="@string/pt_field_visibility">
 
-        <!-- Authors are always visible, but the user can hide the type/pseudonym. -->
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.real_author"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_author_pseudonym" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.author_type"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_author_type" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.cond_bk"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_condition" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.cond_cvr"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_dust_cover" />
-
-
+        <!-- bit: 0 -->
         <SwitchPreference
             android:defaultValue="true"
             android:key="fields.visibility.thumbnail.0"
@@ -74,6 +45,7 @@
             android:summaryOn="@string/yes"
             android:title="@string/lbl_cover_front" />
 
+        <!-- bit: 1 -->
         <SwitchPreference
             android:defaultValue="true"
             android:dependency="fields.visibility.thumbnail.0"
@@ -82,147 +54,10 @@
             android:summaryOn="@string/yes"
             android:title="@string/lbl_cover_back" />
 
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.isbn"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_isbn" />
+        <!-- bit 2: Author is always visible -->
+        <!-- bit 3: Bookshelf is always visible -->
 
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.date_published"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_date_published" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.color"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_color" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.description"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_description" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.edition_bm"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_edition" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.first_publication"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_date_first_publication" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.format"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_format" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.genre"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_genre" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.language"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_language" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.location"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_location" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.pages"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_pages" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.list_price"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_price_listed" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.price_paid"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_price_paid" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.notes"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_personal_notes" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.publisher_id"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_publisher" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.rating"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_rating" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.read_start"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_read_start" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.read_end"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_read_end" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.date_added"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_date_added" />
-
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="fields.visibility.last_update_date"
-            android:summaryOff="@string/no"
-            android:summaryOn="@string/yes"
-            android:title="@string/lbl_date_last_updated" />
-
-        <!-- Series name includes Series 'isComplete' and Series number. -->
+        <!-- bit: 4; Series name includes Series 'isComplete' and Series number. -->
         <SwitchPreference
             android:defaultValue="true"
             android:key="fields.visibility.series_id"
@@ -230,13 +65,15 @@
             android:summaryOn="@string/yes"
             android:title="@string/lbl_series" />
 
+        <!-- bit: 5 -->
         <SwitchPreference
             android:defaultValue="true"
-            android:key="fields.visibility.signed"
+            android:key="fields.visibility.publisher_id"
             android:summaryOff="@string/no"
             android:summaryOn="@string/yes"
-            android:title="@string/lbl_signed" />
+            android:title="@string/lbl_publisher" />
 
+        <!-- bit: 6 -->
         <SwitchPreference
             android:defaultValue="true"
             android:key="fields.visibility.anthology"
@@ -244,12 +81,209 @@
             android:summaryOn="@string/yes"
             android:title="@string/lbl_table_of_content" />
 
+        <!-- bit 7: Lending is handled elsewhere -->
+
+        <!-- bit: 8 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.author_type"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_author_type" />
+
+        <!-- bit: 9 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.cond_bk"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_condition" />
+
+        <!-- bit: 10 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.cond_cvr"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_dust_cover" />
+
+        <!-- bit: 11 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.isbn"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_isbn" />
+
+        <!-- bit: 12 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.date_published"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_date_published" />
+
+        <!-- bit: 13 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.color"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_color" />
+
+        <!-- bit: 14 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.description"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_description" />
+
+        <!-- bit: 15 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.edition_bm"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_edition" />
+
+        <!-- bit: 16 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.first_publication"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_date_first_publication" />
+
+        <!-- bit: 17 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.format"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_format" />
+
+        <!-- bit: 18 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.genre"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_genre" />
+
+        <!-- bit: 19 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.language"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_language" />
+
+        <!-- bit: 20 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.location"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_location" />
+
+        <!-- bit: 21 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.pages"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_pages" />
+
+        <!-- bit: 22 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.list_price"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_price_listed" />
+
+        <!-- bit: 23 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.price_paid"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_price_paid" />
+
+        <!-- bit: 24 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.notes"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_personal_notes" />
+
+        <!-- bit: 25 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.rating"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_rating" />
+
+        <!-- bit: 26 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.signed"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_signed" />
+
+        <!-- bit 27: Read status is always visible -->
+
+        <!-- bit: 28 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.read_start"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_read_start" />
+
+        <!-- bit: 29 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.read_end"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_read_end" />
+
+        <!-- bit: 30 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.date_added"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_date_added" />
+
+        <!-- bit: 31 -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.last_update_date"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_date_last_updated" />
+
+        <!-- bit: 32 -->
         <SwitchPreference
             android:defaultValue="true"
             android:key="fields.visibility.title_original_lang"
             android:summaryOff="@string/no"
             android:summaryOn="@string/yes"
             android:title="@string/lbl_original_title" />
+
+        <!-- bit: 33; Authors are always visible, but the user can hide the type/pseudonym. -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="fields.visibility.real_author"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/lbl_author_pseudonym" />
 
     </com.hardbacknutter.nevertoomanybooks.settings.widgets.ExtPreferenceCategory>
 </PreferenceScreen>
